--- a/home.html
+++ b/home.html
@@ -12,5 +12,13 @@
     <title>Home</title>
   </head>
   <body>
+    <div class="homepage_main_container">
+      <section class="homepage_banner_container">
+        <div class="banner_content_container">
+          <h1 class="_title">HERBS</h1>
+          <button class="btn _btn">Shop now!</button>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
