--- a/home.html
+++ b/home.html
@@ -19,6 +19,54 @@
           <button class="btn _btn">Shop now!</button>
         </div>
       </section>
+
+      <section class="homepage_categories">
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/0317/0687/3992/files/banner-v4-2.jpg?v=1580454437"
+            alt="indoor plant"
+          />
+        </div>
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/0317/0687/3992/files/banner-v4-1.jpg?v=1580454429"
+            alt="outdoor plant"
+          />
+        </div>
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/0317/0687/3992/files/banner2-1.jpg?v=1580878417"
+            alt="new plant"
+          />
+        </div>
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/0317/0687/3992/files/banner2-2.jpg?v=1580878425"
+            alt="bestselling plant"
+          />
+        </div>
+      </section>
+
+      <section class="promotion_banner">
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/1485/6894/files/home5_1_68ba45dd-a8d9-44c7-b875-d92445b1a16d.jpg?v=1520416289"
+            alt="new plant"
+          />
+        </div>
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/1485/6894/files/home5_2_9e0d4572-ae3e-4b72-bcea-e6aa191d2fbd.jpg?v=1520416299"
+            alt="bestselling plant"
+          />
+        </div>
+      </section>
     </div>
   </body>
 </html>
