Added navbar layout

--- a/home.html
+++ b/home.html
@@ -8,11 +8,31 @@
       rel="stylesheet"
       href="https://cosmic-ui.netlify.app/Components/cosmicUI.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cosmic-ui.netlify.app/Docs-css/Docs-navbar.css"
+    />
+    <link rel="stylesheet" href="https://cosmic-ui.netlify.app/style.css">
     <link rel="stylesheet" href="styles/home.css" />
+    <script src="https://kit.fontawesome.com/cbde1196cc.js" defer crossorigin="anonymous"></script>
     <title>Home</title>
   </head>
   <body>
     <div class="homepage_main_container">
+      <nav class="nav-bar white">
+        <div class="nav-innerContainer font-clr">
+          <h2 class="nav-heading">Cosmic UI</h2>
+        </div>
+        <div class="nav-innerContainer font-clr width-auto">
+          <input class="nav_searchBar" type="text">
+          <span class="searchBar_icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+        </div>
+        <div class="nav-innerContainer nav-icon-container">
+          <a class="font-clr" href="#"></a>
+          <a class="font-clr nav-icon" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+      </nav>
+
       <section class="homepage_banner_container">
         <div class="banner_content_container">
           <!-- <h1 class="_title">HERBS</h1>
