--- a/home.html
+++ b/home.html
@@ -12,25 +12,49 @@
       rel="stylesheet"
       href="https://cosmic-ui.netlify.app/Docs-css/Docs-navbar.css"
     />
-    <link rel="stylesheet" href="https://cosmic-ui.netlify.app/style.css">
+    <link rel="stylesheet" href="https://cosmic-ui.netlify.app/style.css" />
     <link rel="stylesheet" href="styles/home.css" />
-    <script src="https://kit.fontawesome.com/cbde1196cc.js" defer crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/utility.css" />
+    <script
+      src="https://kit.fontawesome.com/cbde1196cc.js"
+      defer
+      crossorigin="anonymous"
+    ></script>
     <title>Home</title>
   </head>
   <body>
     <div class="homepage_main_container">
-      <nav class="nav-bar white">
+      <nav class="nav-bar white mb-0">
         <div class="nav-innerContainer font-clr">
-          <h2 class="nav-heading">Cosmic UI</h2>
+          <h2 class="nav-heading mr-4 font-resize">Plant.</h2>
         </div>
+
         <div class="nav-innerContainer font-clr width-auto">
-          <input class="nav_searchBar" type="text">
-          <span class="searchBar_icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+          <input class="nav_searchBar" type="text" />
+          <span class="searchBar_icon"
+            ><i class="fa-solid fa-magnifying-glass"></i
+          ></span>
         </div>
-        <div class="nav-innerContainer nav-icon-container">
-          <a class="font-clr" href="#"></a>
-          <a class="font-clr nav-icon" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+
+        <div class="nav-innerContainer nav-icon-container width-reset inherit-clr mr-1">
+          <div class="flex-col-center">
+            <a class="font-clr" href="#"><i class="fa-solid fa-heart"></i></a>
+            <small>Wishlist</small>
+          </div>
+          
+          <div class="flex-col-center">
+            <a class="font-clr" href="#"><i class="fa-solid fa-user"></i></a>
+            <small>Profile</small>
+          </div>
+
+          <div class="flex-col-center">
+            <a class="font-clr nav-icon" href="#"
+              ><i class="fa-solid fa-cart-shopping"></i
+            ></a>
+            <small>Cart</small>
+          </div>
         </div>
+
       </nav>
 
       <section class="homepage_banner_container">
