--- a/home.html
+++ b/home.html
@@ -36,12 +36,14 @@
           ></span>
         </div>
 
-        <div class="nav-innerContainer nav-icon-container width-reset inherit-clr mr-1">
+        <div
+          class="nav-innerContainer nav-icon-container width-reset inherit-clr mr-1"
+        >
           <div class="flex-col-center">
             <a class="font-clr" href="#"><i class="fa-solid fa-heart"></i></a>
             <small>Wishlist</small>
           </div>
-          
+
           <div class="flex-col-center">
             <a class="font-clr" href="#"><i class="fa-solid fa-user"></i></a>
             <small>Profile</small>
@@ -54,7 +56,6 @@
             <small>Cart</small>
           </div>
         </div>
-
       </nav>
 
       <section class="homepage_banner_container">
@@ -86,23 +87,6 @@
             <h2 class="categories_img_title">Outdoor Plants</h2>
             <p class="categories_img_subtitle_plant">Get Exclusive Offer</p>
           </div>
-        </div>
-      </section>
-
-      <section class="promotion_banner">
-        <div>
-          <img
-            class="plant_img"
-            src="https://cdn.shopify.com/s/files/1/1485/6894/files/home5_1_68ba45dd-a8d9-44c7-b875-d92445b1a16d.jpg?v=1520416289"
-            alt="new plant"
-          />
-        </div>
-        <div>
-          <img
-            class="plant_img"
-            src="https://cdn.shopify.com/s/files/1/1485/6894/files/home5_2_9e0d4572-ae3e-4b72-bcea-e6aa191d2fbd.jpg?v=1520416299"
-            alt="bestselling plant"
-          />
         </div>
       </section>
 
@@ -319,6 +303,38 @@
           </div>
         </div>
       </section>
+
+      <section class="promotion_banner">
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/1485/6894/files/home5_1_68ba45dd-a8d9-44c7-b875-d92445b1a16d.jpg?v=1520416289"
+            alt="new plant"
+          />
+        </div>
+        <div>
+          <img
+            class="plant_img"
+            src="https://cdn.shopify.com/s/files/1/1485/6894/files/home5_2_9e0d4572-ae3e-4b72-bcea-e6aa191d2fbd.jpg?v=1520416299"
+            alt="bestselling plant"
+          />
+        </div>
+      </section>
+
+      <div class="horizontal_rule_container">
+        <hr class="horizontal_rule">
+      </div>
+
+      <footer>
+        <ul class="footer_list_items">
+          <li><a class="mr-1 footer_link inherit-clr" href="#">About Us</a></li>
+          <li><a class="mr-1 ml-1 inherit-clr" href="#">Customer Service</a></li>
+          <li><a class="mr-1 ml-1 inherit-clr" href="#">Subscription</a></li>
+          <li><a class="mr-1 ml-1 inherit-clr" href="#">Contact Us</a></li>
+          <li><a class="mr-1 ml-1 inherit-clr" href="#">Category</a></li>
+          <li><a class="mr-1 ml-1 inherit-clr" href="#">All Product</a></li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
