--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cosmic-ui.netlify.app/style.css" />
     <link rel="stylesheet" href="styles/home.css" />
     <link rel="stylesheet" href="styles/utility.css" />
+    <link rel="stylesheet" href="styles/style.css">
     <script
       src="https://kit.fontawesome.com/cbde1196cc.js"
       defer
