--- a/productListing.html
+++ b/productListing.html
@@ -71,8 +71,8 @@
         <section class="productlisting_main_content_container d-flex">
             <div class="productlisting_sidebar">
                 <div class="products_filter_section">
-                    <h4>Filters</h4>
-                    <button>Clear</button>
+                    <h2>Filters</h2>
+                    <button class="btn custom_clear_btn">Clear</button>
                 </div>
                 <div class="mb-2">
                     <h4 class="products_sidebar_title">Category</h4>
