--- a/productListing.html
+++ b/productListing.html
@@ -143,6 +143,12 @@
                         <label class="ml-1" for="">1 Star & above</label>
                     </div>
                 </div>
+
+                <div>
+                    <img class="productlisting_promotion_banner" src="https://cdn.shopify.com/s/files/1/0317/0687/3992/files/slider-banner1.jpg?v=1580892429"
+                        alt="sale banner"
+                    >
+                </div>
             </div>
 
             <div class="productlisting_products_container">
