Added comments for code readability

--- a/home.html
+++ b/home.html
@@ -25,6 +25,8 @@
   </head>
   <body>
     <div class="homepage_main_container">
+
+      <!-- Navbar -->
       <nav class="nav-bar white mb-0">
         <div class="nav-innerContainer font-clr">
           <h2 class="nav-heading mr-4 font-resize">Plant.</h2>
@@ -59,6 +61,7 @@
         </div>
       </nav>
 
+      <!-- hero banner image -->
       <section class="homepage_banner_container">
         <div class="banner_content_container">
           <!-- <h1 class="_title">HERBS</h1>
@@ -66,6 +69,7 @@
         </div>
       </section>
 
+      <!-- Product category section -->
       <section class="homepage_categories">
         <div class="categories_img_container">
           <img
@@ -91,6 +95,7 @@
         </div>
       </section>
 
+      <!-- category navigation tabs -->
       <section class="categories_navTab_container">
         <ul class="categories_navTabs_list">
           <li>
@@ -111,6 +116,7 @@
         </ul>
       </section>
 
+      <!-- product card container  -->
       <section class="card_container">
         <div class="card-basic card_custom_width">
           <div class="badge-container">
@@ -305,6 +311,7 @@
         </div>
       </section>
 
+      <!-- promotion banner images -->
       <section class="promotion_banner">
         <div>
           <img
@@ -326,6 +333,7 @@
         <hr class="horizontal_rule">
       </div>
 
+      <!-- footer -->
       <footer>
         <ul class="footer_list_items">
           <li><a class="mr-1 footer_link inherit-clr" href="#">About Us</a></li>
