--- a/productListing.html
+++ b/productListing.html
@@ -27,6 +27,8 @@
   <body>
 
     <div class="homepage_main_container">
+
+        <!-- NavBar -->
         <nav class="nav-bar white mb-0">
           <div class="nav-innerContainer font-clr">
             <h2 class="nav-heading mr-4 font-resize">Plant.</h2>
@@ -61,14 +63,12 @@
           </div>
         </nav>
 
-        <section class="productlisting_banner_container">
-            <div class="banner_content_container">
-              <!-- <h1 class="_title">HERBS</h1>
-              <button class="btn _btn">Shop now!</button> -->
-            </div>
-        </section>
+        <!-- hero banner image-->
+        <section class="productlisting_banner_container"></section>
 
         <section class="productlisting_main_content_container d-flex">
+
+            <!-- filter sidebar -->
             <div class="productlisting_sidebar">
                 <div class="products_filter_section">
                     <h2>Filters</h2>
@@ -144,6 +144,7 @@
                     </div>
                 </div>
 
+                <!-- sidebar promotion banner image -->
                 <div>
                     <img class="productlisting_promotion_banner" src="https://cdn.shopify.com/s/files/1/0317/0687/3992/files/slider-banner1.jpg?v=1580892429"
                         alt="sale banner"
@@ -151,6 +152,7 @@
                 </div>
             </div>
 
+            <!-- All product card container -->
             <div class="productlisting_products_container">
                 <div class="card-basic card_custom_width">
                   <div class="badge-container">
@@ -375,6 +377,7 @@
             <hr class="horizontal_rule">
         </div>
     
+        <!-- Footer -->
         <footer>
             <ul class="footer_list_items">
               <li><a class="mr-1 footer_link inherit-clr" href="#">About Us</a></li>
