Linked product listing page with homepage

--- a/productListing.html
+++ b/productListing.html
@@ -385,7 +385,7 @@
               <li><a class="mr-1 ml-1 inherit-clr" href="#">Subscription</a></li>
               <li><a class="mr-1 ml-1 inherit-clr" href="#">Contact Us</a></li>
               <li><a class="mr-1 ml-1 inherit-clr" href="#">Category</a></li>
-              <li><a class="mr-1 ml-1 inherit-clr" href="#">All Product</a></li>
+              <li><a class="mr-1 ml-1 inherit-clr" href="./productListing.html">All Product</a></li>
             </ul>
         </footer>
     </body>
