--- a/cartManagement.html
+++ b/cartManagement.html
@@ -66,10 +66,12 @@
       <!-- hero banner image-->
       <section class="productlisting_banner_container"></section>
 
+      <h2 class="cart_page_title">My Cart (2)</h2>
+
       <section
         class="cart_container d-flex productlisting_main_content_container"
       >
-        <div class="cart_products_container">
+        <div class="cart_products_container d-flex">
           <div
             class="card-basic Card-horizontalImage-textContainer cart_card_resize p-relative"
           >
@@ -86,40 +88,101 @@
                 <p class="card-description text-bold">₹ 10,999</p>
 
                 <div class="d-flex cart_card_quantitycontainer">
-                    <small>Quantity :</small>
-                    <!-- <i class="fa-regular fa-square-plus"></i> -->
-                    <button class="btn cart_card_outlinebtn customstyle_btn">+</button>
-                    <input class="cart_card_quantity_inp" type="text" value="1">
-                    <button class="btn cart_card_outlinebtn customstyle_btn">-</button>
-                    <!-- <i class="fa-regular fa-square-minus"></i> -->
+                  <small>Quantity :</small>
+                  <button class="btn cart_card_outlinebtn customstyle_btn">
+                    +
+                  </button>
+                  <input class="cart_card_quantity_inp" type="text" value="1" />
+                  <button class="btn cart_card_outlinebtn customstyle_btn">
+                    -
+                  </button>
                 </div>
 
-                <div class="d-flex mt-2 cart_card_btncontainer">
+                <div class="d-flex mt-2 cart_card_btncontainer mb-2">
                   <button class="btn btn-text-icon cart_card_solidbtn mr-1">
-                    <!-- <span class="icon">
-                        <i class="fa fa-shopping-cart"></i>
-                    </span> -->
                     Remove from Cart
                   </button>
                   <button class="btn btn-text-icon cart_card_outlinebtn">
-                    <!-- <span class="icon"
-                      ><i class="fa fa-shopping-cart"></i
-                    ></span> -->
                     Move to Wishlist
                   </button>
                 </div>
               </div>
             </div>
+          </div>
 
-            <div class="card-footer">
-              <!-- <button class="btn btn-text-icon btn-ecommerce">
-                <span class="icon"><i class="fa fa-shopping-cart"></i></span>
-                Add to Cart
-              </button>
-              <button class="btn btn-text-icon btn-ecommerce">
-                <span class="icon"><i class="fa fa-shopping-cart"></i></span>
-                Add to Cart
-              </button> -->
+          <div
+            class="card-basic Card-horizontalImage-textContainer cart_card_resize p-relative"
+          >
+            <div class="Card-horizontalImage-text">
+              <img
+                class="card-img Card-horizontalImage-text-img Card-horizontalImage-text-img-Ecommerce cart_card_imgresize"
+                src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+              />
+              <i class="fa-solid fa-xmark cart_card_closeicon"></i>
+
+              <div class="ml-2 cart_card_content">
+                <h3 class="card-heading">Nike Men's Flex 2020</h3>
+                <small class="card-subHeading">Sport Shoes</small>
+                <p class="card-description text-bold">₹ 10,999</p>
+
+                <div class="d-flex cart_card_quantitycontainer">
+                  <small>Quantity :</small>
+                  <button class="btn cart_card_outlinebtn customstyle_btn">
+                    +
+                  </button>
+                  <input class="cart_card_quantity_inp" type="text" value="1" />
+                  <button class="btn cart_card_outlinebtn customstyle_btn">
+                    -
+                  </button>
+                </div>
+
+                <div class="d-flex mt-2 cart_card_btncontainer mb-2">
+                  <button class="btn btn-text-icon cart_card_solidbtn mr-1">
+                    Remove from Cart
+                  </button>
+                  <button class="btn btn-text-icon cart_card_outlinebtn">
+                    Move to Wishlist
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="card-basic Card-horizontalImage-textContainer cart_card_resize p-relative"
+          >
+            <div class="Card-horizontalImage-text">
+              <img
+                class="card-img Card-horizontalImage-text-img Card-horizontalImage-text-img-Ecommerce cart_card_imgresize"
+                src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+              />
+              <i class="fa-solid fa-xmark cart_card_closeicon"></i>
+
+              <div class="ml-2 cart_card_content">
+                <h3 class="card-heading">Nike Men's Flex 2020</h3>
+                <small class="card-subHeading">Sport Shoes</small>
+                <p class="card-description text-bold">₹ 10,999</p>
+
+                <div class="d-flex cart_card_quantitycontainer">
+                  <small>Quantity :</small>
+                  <button class="btn cart_card_outlinebtn customstyle_btn">
+                    +
+                  </button>
+                  <input class="cart_card_quantity_inp" type="text" value="1" />
+                  <button class="btn cart_card_outlinebtn customstyle_btn">
+                    -
+                  </button>
+                </div>
+
+                <div class="d-flex mt-2 cart_card_btncontainer mb-2">
+                  <button class="btn btn-text-icon cart_card_solidbtn mr-1">
+                    Remove from Cart
+                  </button>
+                  <button class="btn btn-text-icon cart_card_outlinebtn">
+                    Move to Wishlist
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
