--- a/cartManagement.html
+++ b/cartManagement.html
@@ -66,11 +66,12 @@
       <!-- hero banner image-->
       <section class="productlisting_banner_container"></section>
 
-      <h2 class="cart_page_title">My Cart (2)</h2>
+      <h2 class="cart_page_title">My Cart (3)</h2>
 
       <section
         class="cart_container d-flex productlisting_main_content_container"
       >
+        <!-- Product items container -->
         <div class="cart_products_container d-flex">
           <div
             class="card-basic Card-horizontalImage-textContainer cart_card_resize p-relative"
@@ -83,9 +84,9 @@
               <i class="fa-solid fa-xmark cart_card_closeicon"></i>
 
               <div class="ml-2 cart_card_content">
-                <h3 class="card-heading">Nike Men's Flex 2020</h3>
-                <small class="card-subHeading">Sport Shoes</small>
-                <p class="card-description text-bold">₹ 450</p>
+                <h3 class="card-heading">Indoor Aleovera Plant</h3>
+                <small class="card-subHeading">Air purifier</small>
+                <p class="card-description text-bold">₹ 800</p>
 
                 <div class="d-flex cart_card_quantitycontainer">
                   <small>Quantity :</small>
@@ -123,9 +124,9 @@
               <i class="fa-solid fa-xmark cart_card_closeicon"></i>
 
               <div class="ml-2 cart_card_content">
-                <h3 class="card-heading">Nike Men's Flex 2020</h3>
-                <small class="card-subHeading">Sport Shoes</small>
-                <p class="card-description text-bold">₹ 499</p>
+                <h3 class="card-heading">Aleovera Indoor Plant</h3>
+                <small class="card-subHeading">Air purifier</small>
+                <p class="card-description text-bold">₹ 1200</p>
 
                 <div class="d-flex cart_card_quantitycontainer">
                   <small>Quantity :</small>
@@ -163,8 +164,8 @@
               <i class="fa-solid fa-xmark cart_card_closeicon"></i>
 
               <div class="ml-2 cart_card_content">
-                <h3 class="card-heading">Nike Men's Flex 2020</h3>
-                <small class="card-subHeading">Sport Shoes</small>
+                <h3 class="card-heading">Aleovera Indoor Plant</h3>
+                <small class="card-subHeading">Succulent</small>
                 <p class="card-description text-bold">₹ 999</p>
 
                 <div class="d-flex cart_card_quantitycontainer">
@@ -193,6 +194,7 @@
           </div>
         </div>
 
+        <!-- Payment details card container -->
         <div class="cart_payment_receipt card-basic">
           <div class="b-bottom1 cart_pricedetails_section_gap">
             <h4>PRICE DETAILS</h4>
@@ -236,9 +238,9 @@
             You will save ₹3,760 on this order
           </p>
 
-          <div>
+          <div class="cart_pricedetails_section_gap mb-1">
             <button
-              class="btn btn-ecommerce cta-btn cart_pricedetails_section_gap"
+              class="btn cta-btn cart_pricedetails_section_gap width-100p"
             >
               PLACE ORDER
             </button>
