--- a/home.html
+++ b/home.html
@@ -350,6 +350,7 @@
           <li><a class="mr-1 ml-1 inherit-clr" href="#">Contact Us</a></li>
           <li><a class="mr-1 ml-1 inherit-clr" href="#">Category</a></li>
           <li><a class="mr-1 ml-1 inherit-clr" href="./productListing.html">All Product</a></li>
+          <li><a class="mr-1 ml-1 inherit-clr" href="./cartManagement.html">My Cart</a></li>
         </ul>
       </footer>
     </div>
