--- a/cartManagement.html
+++ b/cartManagement.html
@@ -267,6 +267,11 @@
               >All Product</a
             >
           </li>
+          <li>
+            <a class="mr-1 ml-1 inherit-clr" href="./cartManagement.html"
+              >My Cart</a
+            >
+          </li>
         </ul>
       </footer>
     </div>
