Added links and refactor code

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cosmic-ui.netlify.app/style.css" />
     <link rel="stylesheet" href="styles/home.css" />
     <link rel="stylesheet" href="styles/utility.css" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <script
       src="https://kit.fontawesome.com/cbde1196cc.js"
       defer
@@ -25,7 +25,6 @@
   </head>
   <body>
     <div class="homepage_main_container">
-
       <!-- Navbar -->
       <nav class="nav-bar white mb-0">
         <div class="nav-innerContainer font-clr">
@@ -338,19 +337,34 @@
       </section>
 
       <div class="horizontal_rule_container">
-        <hr class="horizontal_rule">
+        <hr class="horizontal_rule" />
       </div>
 
       <!-- footer -->
       <footer>
         <ul class="footer_list_items">
           <li><a class="mr-1 footer_link inherit-clr" href="#">About Us</a></li>
-          <li><a class="mr-1 ml-1 inherit-clr" href="#">Customer Service</a></li>
+          <li>
+            <a class="mr-1 ml-1 inherit-clr" href="#">Customer Service</a>
+          </li>
           <li><a class="mr-1 ml-1 inherit-clr" href="#">Subscription</a></li>
           <li><a class="mr-1 ml-1 inherit-clr" href="#">Contact Us</a></li>
           <li><a class="mr-1 ml-1 inherit-clr" href="#">Category</a></li>
-          <li><a class="mr-1 ml-1 inherit-clr" href="./productListing.html">All Product</a></li>
-          <li><a class="mr-1 ml-1 inherit-clr" href="./cartManagement.html">My Cart</a></li>
+          <li>
+            <a class="mr-1 ml-1 inherit-clr" href="./productListing.html"
+              >All Product</a
+            >
+          </li>
+          <li>
+            <a class="mr-1 ml-1 inherit-clr" href="./cartManagement.html"
+              >My Cart</a
+            >
+          </li>
+          <li>
+            <a class="mr-1 ml-1 inherit-clr" href="./wishlist.html"
+              >My Wishlist</a
+            >
+          </li>
         </ul>
       </footer>
     </div>
