--- a/cartManagement.html
+++ b/cartManagement.html
@@ -275,6 +275,11 @@
               >My Cart</a
             >
           </li>
+          <li>
+            <a class="mr-1 ml-1 inherit-clr" href="./wishlist.html"
+              >My Wishlist</a
+            >
+          </li>
         </ul>
       </footer>
     </div>
