--- a/productListing.html
+++ b/productListing.html
@@ -396,6 +396,7 @@
               <li><a class="mr-1 ml-1 inherit-clr" href="#">Category</a></li>
               <li><a class="mr-1 ml-1 inherit-clr" href="./productListing.html">All Product</a></li>
               <li><a class="mr-1 ml-1 inherit-clr" href="./cartManagement.html">My Cart</a></li>
+              <li><a class="mr-1 ml-1 inherit-clr" href="./wishlist.html">My Wishlist</a></li>
             </ul>
         </footer>
     </body>
