--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/home.css" />
     <link rel="stylesheet" href="styles/utility.css" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/login.css" />
     <script
       src="https://kit.fontawesome.com/cbde1196cc.js"
       defer
@@ -31,13 +31,6 @@
       <nav class="nav-bar white mb-0">
         <div class="nav-innerContainer font-clr">
           <h2 class="nav-heading mr-4 font-resize">Plant.</h2>
-        </div>
-
-        <div class="nav-innerContainer font-clr width-auto">
-          <input class="nav_searchBar" type="text" />
-          <span class="searchBar_icon"
-            ><i class="fa-solid fa-magnifying-glass"></i
-          ></span>
         </div>
 
         <div
@@ -62,14 +55,18 @@
         </div>
       </nav>
 
-      <section class="login_form_container">
-        <form onsubmit="event.preventDefault(); checkFormValidation()">
-          <div class="inp-container">
-            <label class="inp-label d-block inp-label-required" for=""
+      <section class="login_form_container d-flex">
+        <form
+          class="card-basic login_form"
+          onsubmit="event.preventDefault(); checkFormValidation()"
+        >
+          <h2 class="t-align-center mt-2 mb-2">Login</h2>
+          <div class="inp-container gap-resize">
+            <label class="inp-label d-block inp-label-required f-size1" for=""
               >Username</label
             >
             <input
-              class="inp"
+              class="inp login_inp_resize"
               id="inp-email"
               placeholder="Enter email address"
             />
@@ -82,12 +79,12 @@
             </div>
           </div>
 
-          <div class="inp-container">
-            <label class="inp-label d-block inp-label-required" for=""
+          <div class="inp-container gap-resize">
+            <label class="inp-label d-block inp-label-required f-size1" for=""
               >Password</label
             >
             <input
-              class="inp"
+              class="inp login_inp_resize"
               id="inp-password"
               placeholder="Enter text here"
             />
@@ -100,9 +97,9 @@
             </div>
           </div>
 
-          <div class="inp-container">
+          <div class="inp-container gap-resize">
             <input type="checkbox" id="checkbox-termsPolicy" />
-            <label class="inp-label inp-label-required"
+            <label class="inp-label inp-label-required f-size1"
               >Yes, I accept the Cosmic UI terms & policy</label
             >
 
@@ -114,8 +111,14 @@
             </div>
           </div>
 
-          <div class="inp-container">
-            <button class="btn" type="submit">Submit</button>
+          <div class="inp-container ml-1 mb-1">
+            <button class="btn cta-btn login_custom_btn" type="submit">
+              Submit
+            </button>
+          </div>
+
+          <div class="inp-container t-align-center">
+            <small><a class="create_acc_link" href="#">Create New Account</a></small>
           </div>
         </form>
       </section>
