Signup page done

--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
             <input
               class="inp login_inp_resize"
               id="inp-email"
-              placeholder="Enter email address"
+              placeholder="Enter your username"
             />
 
             <div class="err-msg-container d-none">
@@ -86,7 +86,7 @@
             <input
               class="inp login_inp_resize"
               id="inp-password"
-              placeholder="Enter text here"
+              placeholder="Enter your password"
             />
 
             <div class="err-msg-container d-none">
@@ -100,7 +100,7 @@
           <div class="inp-container mb-1">
             <div class="d-flex login_checkbox_inp_container">
               <input type="checkbox" id="checkbox-termsPolicy" />
-              <label class="inp-label inp-label-required font-small"
+              <label class="inp-label font-small"
                 >Remember Me</label
               >
             </div>
@@ -115,7 +115,7 @@
 
           <div class="inp-container ml-1 mb-1">
             <button class="btn cta-btn login_custom_btn" type="submit">
-              Submit
+              Login
             </button>
           </div>
 
