--- a/cartManagement.html
+++ b/cartManagement.html
@@ -45,17 +45,17 @@
           class="nav-innerContainer nav-icon-container width-reset inherit-clr mr-1"
         >
           <div class="flex-col-center">
-            <a class="font-clr" href="#"><i class="fa-solid fa-heart"></i></a>
+            <a class="font-clr" href="./wishlist.html"><i class="fa-solid fa-heart"></i></a>
             <small>Wishlist</small>
           </div>
 
           <div class="flex-col-center">
-            <a class="font-clr" href="#"><i class="fa-solid fa-user"></i></a>
+            <a class="font-clr" href="./login.html"><i class="fa-solid fa-user"></i></a>
             <small>Profile</small>
           </div>
 
           <div class="flex-col-center">
-            <a class="font-clr nav-icon" href="#"
+            <a class="font-clr nav-icon" href="./cartManagement.html"
               ><i class="fa-solid fa-cart-shopping"></i
             ></a>
             <small>Cart</small>
