--- a/home.html
+++ b/home.html
@@ -42,17 +42,17 @@
           class="nav-innerContainer nav-icon-container width-reset inherit-clr mr-1"
         >
           <div class="flex-col-center">
-            <a class="font-clr" href="#"><i class="fa-solid fa-heart"></i></a>
+            <a class="font-clr" href="./wishlist.html"><i class="fa-solid fa-heart"></i></a>
             <small>Wishlist</small>
           </div>
 
           <div class="flex-col-center">
-            <a class="font-clr" href="#"><i class="fa-solid fa-user"></i></a>
+            <a class="font-clr" href="./login.html"><i class="fa-solid fa-user"></i></a>
             <small>Profile</small>
           </div>
 
           <div class="flex-col-center">
-            <a class="font-clr nav-icon" href="#"
+            <a class="font-clr nav-icon" href="./cartManagement.html"
               ><i class="fa-solid fa-cart-shopping"></i
             ></a>
             <small>Cart</small>
@@ -63,8 +63,6 @@
       <!-- hero banner image -->
       <section class="homepage_banner_container">
         <div class="banner_content_container">
-          <!-- <h1 class="_title">HERBS</h1>
-          <button class="btn _btn">Shop now!</button> -->
         </div>
       </section>
 
