--- a/login.html
+++ b/login.html
@@ -152,7 +152,7 @@
             >
           </li>
           <li>
-            <a class="mr-1 ml-1 inherit-clr" href="#">My Wishlist</a>
+            <a class="mr-1 ml-1 inherit-clr" href="./wishlist.html">My Wishlist</a>
           </li>
         </ul>
       </footer>
