--- a/wishlist.html
+++ b/wishlist.html
@@ -203,7 +203,7 @@
             >
           </li>
           <li>
-            <a class="mr-1 ml-1 inherit-clr" href="#">My Wishlist</a>
+            <a class="mr-1 ml-1 inherit-clr" href="./wishlist.html">My Wishlist</a>
           </li>
         </ul>
       </footer>
